emoji_window/emoji_window.h


// Button click callback type (stdcall)
// 鍙傛暟: button_id - 鎸夐挳ID, parent_hwnd - 鐖剁獥鍙ｅ彞鏌?
typedef void (__stdcall *ButtonClickCallback)(int button_id, HWND parent_hwnd);


// 澶嶉€夋鍥炶皟鍑芥暟绫诲瀷 (stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *CheckBoxCallback)(HWND hCheckBox, BOOL checked);
// 鍗曢€夋寜閽洖璋冨嚱鏁扮被鍨?(stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *RadioButtonCallback)(HWND hRadioButton, int group_id, BOOL checked);


    __declspec(dllexport) int __stdcall create_emoji_button_bytes(
        HWND parent,
        const unsigned char* emoji_bytes,
        int emoji_len,
        const unsigned char* text_bytes,
        int text_len,
        int x, int y, int width, int height,
        UINT32 bg_color
    );


    __declspec(dllexport) void __stdcall set_button_click_callback(ButtonClickCallback callback);

    
    // ========== 鎸夐挳灞炴€у懡浠?==========
    
    // 鑾峰彇鎸夐挳鏂囨湰 (UTF-8缂栫爜锛屼袱娆¤皟鐢ㄦā寮?
    __declspec(dllexport) int __stdcall GetButtonText(int button_id, unsigned char* buffer, int buffer_size);

    
    // 璁剧疆鎸夐挳鏂囨湰 (UTF-8缂栫爜)
    __declspec(dllexport) void __stdcall SetButtonText(int button_id, const unsigned char* text, int text_len);

    
    // 鑾峰彇鎸夐挳Emoji (UTF-8缂栫爜锛屼袱娆¤皟鐢ㄦā寮?
    __declspec(dllexport) int __stdcall GetButtonEmoji(int button_id, unsigned char* buffer, int buffer_size);

    
    // 璁剧疆鎸夐挳Emoji (UTF-8缂栫爜)
    __declspec(dllexport) void __stdcall SetButtonEmoji(int button_id, const unsigned char* emoji, int emoji_len);

    
    // 鑾峰彇鎸夐挳浣嶇疆鍜屽ぇ灏?
    __declspec(dllexport) int __stdcall GetButtonBounds(int button_id, int* x, int* y, int* width, int* height);

    
    // 璁剧疆鎸夐挳浣嶇疆鍜屽ぇ灏?
    __declspec(dllexport) void __stdcall SetButtonBounds(int button_id, int x, int y, int width, int height);

    
    // 鑾峰彇鎸夐挳鑳屾櫙鑹?(ARGB鏍煎紡)
    __declspec(dllexport) UINT32 __stdcall GetButtonBackgroundColor(int button_id);

    
    // 璁剧疆鎸夐挳鑳屾櫙鑹?(ARGB鏍煎紡)
    __declspec(dllexport) void __stdcall SetButtonBackgroundColor(int button_id, UINT32 color);
    __declspec(dllexport) void __stdcall SetButtonTextColor(int button_id, UINT32 color);
    __declspec(dllexport) void __stdcall SetButtonType(int button_id, int type);
    __declspec(dllexport) void __stdcall SetButtonStyle(int button_id, int style);
    
    // 鏄剧ず/闅愯棌鎸夐挳
    __declspec(dllexport) void __stdcall ShowButton(int button_id, BOOL visible);

    
    // 鑾峰彇鎸夐挳鍚敤鐘舵€?
    __declspec(dllexport) BOOL __stdcall GetButtonEnabled(int button_id);

    
    // 鍚敤鎸夐挳 (宸插瓨鍦?
    __declspec(dllexport) void __stdcall EnableButton(HWND parent_hwnd, int button_id, BOOL enable);


    // ========== 缂栬緫妗嗗姛鑳?==========

    // 鍒涘缓缂栬緫妗嗭紙vertical_center 浠呭崟琛屾湁鏁堬級
    __declspec(dllexport) HWND __stdcall CreateEditBox(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  // 0=宸? 1=涓? 2=鍙?
        BOOL multiline,
        BOOL readonly,
        BOOL password,
        BOOL has_border,
        BOOL vertical_center  // 鏂囨湰鍨傜洿灞呬腑锛堜粎鍗曡鏈夋晥锛?
    );


    // 鑾峰彇缂栬緫妗嗘枃鏈?
    __declspec(dllexport) int __stdcall GetEditBoxText(
        HWND hEdit,
        unsigned char* buffer,
        int buffer_size
    );


    // 璁剧疆缂栬緫妗嗘枃鏈?
    __declspec(dllexport) void __stdcall SetEditBoxText(
        HWND hEdit,
        const unsigned char* text_bytes,
        int text_len
    );


    // 璁剧疆缂栬緫妗嗛鑹?
    __declspec(dllexport) void __stdcall SetEditBoxColor(
        HWND hEdit,
        UINT32 fg_color,
        UINT32 bg_color
    );


    // 璁剧疆缂栬緫妗嗕綅缃拰澶у皬
    __declspec(dllexport) void __stdcall SetEditBoxBounds(
        HWND hEdit,
        int x, int y, int width, int height
    );


    // 鍚敤/绂佺敤缂栬緫妗?
    __declspec(dllexport) void __stdcall EnableEditBox(
        HWND hEdit,
        BOOL enable
    );


    // 鏄剧ず/闅愯棌缂栬緫妗?
    __declspec(dllexport) void __stdcall ShowEditBox(
        HWND hEdit,
        BOOL show
    );
    __declspec(dllexport) void __stdcall SetEditBoxAlignment(
        HWND hEdit,
        int alignment
    );


    // 鍒涘缓褰╄壊Emoji缂栬緫妗嗭紙浣跨敤RichEdit鎺т欢锛屾敮鎸佸僵鑹瞖moji鏄剧ず锛?
    __declspec(dllexport) HWND __stdcall CreateColorEmojiEditBox(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  // 0=宸? 1=涓? 2=鍙?
        BOOL multiline,
        BOOL readonly,
        BOOL password,
        BOOL has_border,
        BOOL vertical_center  // 鏂囨湰鍨傜洿灞呬腑锛堜粎鍗曡鏈夋晥锛?
    );
    __declspec(dllexport) void __stdcall SetD2DEditBoxColor(
        HWND hEdit,
        UINT32 fg_color,
        UINT32 bg_color
    );
    // ========== 鏍囩鍔熻兘 ==========  

    // 鍒涘缓鏍囩
    __declspec(dllexport) HWND __stdcall CreateLabel(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  // 0=宸? 1=涓? 2=鍙?
        BOOL word_wrap  // 鏄惁鎹㈣鏄剧ず
    );


    // 鑾峰彇鏍囩鏂囨湰
    __declspec(dllexport) int __stdcall GetLabelText(
        HWND hLabel,
        unsigned char* buffer,
        int buffer_size
    );


    // 璁剧疆鏍囩鏂囨湰
    __declspec(dllexport) void __stdcall SetLabelText(
        HWND hLabel,
        const unsigned char* text_bytes,
        int text_len
    );


    // 璁剧疆鏍囩瀛椾綋
    __declspec(dllexport) void __stdcall SetLabelFont(
        HWND hLabel,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline
    );


    // 璁剧疆鏍囩棰滆壊
    __declspec(dllexport) void __stdcall SetLabelColor(
        HWND hLabel,
        UINT32 fg_color,
        UINT32 bg_color
    );


    // 璁剧疆鏍囩浣嶇疆鍜屽ぇ灏?
    __declspec(dllexport) void __stdcall SetLabelBounds(
        HWND hLabel,
        int x, int y, int width, int height
    );


    // 鏄剧ず/闅愯棌鏍囩
    __declspec(dllexport) void __stdcall ShowLabel(
        HWND hLabel,
        BOOL show
    );


    // 鑾峰彇鏍囩瀵归綈鏂瑰紡 (0=宸? 1=涓? 2=鍙?
    __declspec(dllexport) int __stdcall GetLabelAlignment(
        HWND hLabel
    );


    // ========== 澶嶉€夋鍔熻兘 ==========

    // 鍒涘缓澶嶉€夋
    __declspec(dllexport) HWND __stdcall CreateCheckBox(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        BOOL checked,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline
    );


    // 鑾峰彇澶嶉€夋閫変腑鐘舵€?
    __declspec(dllexport) BOOL __stdcall GetCheckBoxState(
        HWND hCheckBox
    );


    // 璁剧疆澶嶉€夋閫変腑鐘舵€?
    __declspec(dllexport) void __stdcall SetCheckBoxState(
        HWND hCheckBox,
        BOOL checked
    );


    // 璁剧疆澶嶉€夋鍥炶皟
    __declspec(dllexport) void __stdcall SetCheckBoxCallback(
        HWND hCheckBox,
        CheckBoxCallback callback
    );


    // 鍚敤/绂佺敤澶嶉€夋
    __declspec(dllexport) void __stdcall EnableCheckBox(
        HWND hCheckBox,
        BOOL enable
    );


    // 鏄剧ず/闅愯棌澶嶉€夋
    __declspec(dllexport) void __stdcall ShowCheckBox(
        HWND hCheckBox,
        BOOL show
    );


    // 璁剧疆澶嶉€夋鏂囨湰
    __declspec(dllexport) void __stdcall SetCheckBoxText(
        HWND hCheckBox,
        const unsigned char* text_bytes,
        int text_len
    );


    // 璁剧疆澶嶉€夋浣嶇疆鍜屽ぇ灏?
    __declspec(dllexport) void __stdcall SetCheckBoxBounds(
        HWND hCheckBox,
        int x, int y, int width, int height
    );


    // 鑾峰彇澶嶉€夋鏂囨湰锛圲TF-8锛屼袱娆¤皟鐢ㄦā寮忥級
    __declspec(dllexport) int __stdcall GetCheckBoxText(
        HWND hCheckBox,
        unsigned char* buffer,
        int buffer_size
    );


    // 璁剧疆澶嶉€夋棰滆壊
    __declspec(dllexport) void __stdcall SetCheckBoxColor(
        HWND hCheckBox,
        UINT32 fg_color,
        UINT32 bg_color
    );


    __declspec(dllexport) void __stdcall SetCheckBoxCheckColor(
        HWND hCheckBox,
        UINT32 check_color
    );


    __declspec(dllexport) void __stdcall SetCheckBoxStyle(
        HWND hCheckBox,
        int style
    );


    __declspec(dllexport) int __stdcall GetCheckBoxStyle(
        HWND hCheckBox
    );


    // ========== 杩涘害鏉″姛鑳?==========

    // 鍒涘缓杩涘害鏉?
    __declspec(dllexport) HWND __stdcall CreateProgressBar(
        HWND hParent,
        int x, int y, int width, int height,
        int initial_value,  // 鍒濆鍊?(0-100)
        UINT32 fg_color,
        UINT32 bg_color,
        BOOL show_text,     // 鏄惁鏄剧ず鐧惧垎姣旀枃鏈?
        UINT32 text_color   // 鏂囨湰棰滆壊
    );


    // 璁剧疆杩涘害鏉″€?(0-100)
    __declspec(dllexport) void __stdcall SetProgressValue(
        HWND hProgressBar,
        int value
    );


    // 鑾峰彇杩涘害鏉″€?
    __declspec(dllexport) int __stdcall GetProgressValue(
        HWND hProgressBar
    );


    // 璁剧疆杩涘害鏉′笉纭畾妯″紡
    __declspec(dllexport) void __stdcall SetProgressIndeterminate(
        HWND hProgressBar,
        BOOL indeterminate
    );


    // ========== 鍗曢€夋寜閽姛鑳?==========

    // 鍒涘缓鍗曢€夋寜閽?
    __declspec(dllexport) HWND __stdcall CreateRadioButton(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        int group_id,
        BOOL checked,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline
    );


    // 鑾峰彇鍗曢€夋寜閽€変腑鐘舵€?
    __declspec(dllexport) BOOL __stdcall GetRadioButtonState(
        HWND hRadioButton
    );


    // 璁剧疆鍗曢€夋寜閽€変腑鐘舵€?
    __declspec(dllexport) void __stdcall SetRadioButtonState(
        HWND hRadioButton,
        BOOL checked
    );


    // 璁剧疆鍗曢€夋寜閽洖璋?
    __declspec(dllexport) void __stdcall SetRadioButtonCallback(
        HWND hRadioButton,
        RadioButtonCallback callback
    );


    // 璁剧疆鍗曢€夋寜閽枃鏈?
    __declspec(dllexport) void __stdcall SetRadioButtonText(
        HWND hRadioButton,
        const unsigned char* text_bytes,
        int text_len
    );


    // 璁剧疆鍗曢€夋寜閽綅缃拰澶у皬
    __declspec(dllexport) void __stdcall SetRadioButtonBounds(
        HWND hRadioButton,
        int x, int y, int width, int height
    );


    // 鑾峰彇鍗曢€夋寜閽枃鏈紙UTF-8锛屼袱娆¤皟鐢ㄦā寮忥級
    __declspec(dllexport) int __stdcall GetRadioButtonText(
        HWND hRadioButton,
        unsigned char* buffer,
        int buffer_size
    );


    // 璁剧疆鍗曢€夋寜閽鑹?
    __declspec(dllexport) void __stdcall SetRadioButtonColor(
        HWND hRadioButton,
        UINT32 fg_color,
        UINT32 bg_color
    );
    __declspec(dllexport) void __stdcall SetRadioButtonDotColor(
        HWND hRadioButton,
        UINT32 dot_color
    );
    __declspec(dllexport) void __stdcall SetRadioButtonStyle(
        HWND hRadioButton,
        int style
    );