examples/Csharp/Common/EmojiWindowNative.cs


        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int create_emoji_button_bytes(IntPtr parent, byte[] emojiBytes, int emojiLen, byte[] textBytes, int textLen, int x, int y, int width, int height, uint bgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void set_button_click_callback(ButtonClickCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetButtonText(int buttonId, IntPtr buffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetButtonText(int buttonId, byte[] textBytes, int textLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetButtonEmoji(int buttonId, IntPtr buffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetButtonEmoji(int buttonId, byte[] emojiBytes, int emojiLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetButtonBounds(int buttonId, out int x, out int y, out int width, out int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetButtonBounds(int buttonId, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern uint GetButtonBackgroundColor(int buttonId);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetButtonBackgroundColor(int buttonId, uint color);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetButtonTextColor(int buttonId, uint color);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetButtonType(int buttonId, int type);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetButtonStyle(int buttonId, int style);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ShowButton(int buttonId, [MarshalAs(UnmanagedType.Bool)] bool visible);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetButtonEnabled(int buttonId);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void EnableButton(IntPtr parentHwnd, int buttonId, [MarshalAs(UnmanagedType.Bool)] bool enable);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateLabel(IntPtr parent, int x, int y, int width, int height, byte[] textBytes, int textLen, uint fgColor, uint bgColor, byte[] fontBytes, int fontLen, int fontSize, [MarshalAs(UnmanagedType.Bool)] bool bold, [MarshalAs(UnmanagedType.Bool)] bool italic, [MarshalAs(UnmanagedType.Bool)] bool underline, int align, [MarshalAs(UnmanagedType.Bool)] bool wordWrap);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetLabelText(IntPtr hLabel, IntPtr buffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetLabelText(IntPtr hLabel, byte[] textBytes, int textLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetLabelFont(IntPtr hLabel, byte[] fontBytes, int fontLen, int fontSize, [MarshalAs(UnmanagedType.Bool)] bool bold, [MarshalAs(UnmanagedType.Bool)] bool italic, [MarshalAs(UnmanagedType.Bool)] bool underline);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetLabelColor(IntPtr hLabel, uint fgColor, uint bgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetLabelBounds(IntPtr hLabel, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ShowLabel(IntPtr hLabel, [MarshalAs(UnmanagedType.Bool)] bool show);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetLabelAlignment(IntPtr hLabel);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateEditBox(IntPtr parent, int x, int y, int width, int height, byte[] textBytes, int textLen, uint fgColor, uint bgColor, byte[] fontBytes, int fontLen, int fontSize, [MarshalAs(UnmanagedType.Bool)] bool bold, [MarshalAs(UnmanagedType.Bool)] bool italic, [MarshalAs(UnmanagedType.Bool)] bool underline, int alignment, [MarshalAs(UnmanagedType.Bool)] bool multiline, [MarshalAs(UnmanagedType.Bool)] bool readOnly, [MarshalAs(UnmanagedType.Bool)] bool password, [MarshalAs(UnmanagedType.Bool)] bool hasBorder, [MarshalAs(UnmanagedType.Bool)] bool verticalCenter);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateColorEmojiEditBox(IntPtr parent, int x, int y, int width, int height, byte[] textBytes, int textLen, uint fgColor, uint bgColor, byte[] fontBytes, int fontLen, int fontSize, [MarshalAs(UnmanagedType.Bool)] bool bold, [MarshalAs(UnmanagedType.Bool)] bool italic, [MarshalAs(UnmanagedType.Bool)] bool underline, int alignment, [MarshalAs(UnmanagedType.Bool)] bool multiline, [MarshalAs(UnmanagedType.Bool)] bool readOnly, [MarshalAs(UnmanagedType.Bool)] bool password, [MarshalAs(UnmanagedType.Bool)] bool hasBorder, [MarshalAs(UnmanagedType.Bool)] bool verticalCenter);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetEditBoxText(IntPtr hEdit, IntPtr buffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetEditBoxText(IntPtr hEdit, byte[] textBytes, int textLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetEditBoxColor(IntPtr hEdit, uint fgColor, uint bgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetD2DEditBoxColor(IntPtr hEdit, uint fgColor, uint bgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetEditBoxBounds(IntPtr hEdit, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void EnableEditBox(IntPtr hEdit, [MarshalAs(UnmanagedType.Bool)] bool enable);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ShowEditBox(IntPtr hEdit, [MarshalAs(UnmanagedType.Bool)] bool show);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetEditBoxAlignment(IntPtr hEdit, int alignment);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateCheckBox(IntPtr parent, int x, int y, int width, int height, byte[] textBytes, int textLen, [MarshalAs(UnmanagedType.Bool)] bool isChecked, uint fgColor, uint bgColor, byte[] fontBytes, int fontLen, int fontSize, [MarshalAs(UnmanagedType.Bool)] bool bold, [MarshalAs(UnmanagedType.Bool)] bool italic, [MarshalAs(UnmanagedType.Bool)] bool underline);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetCheckBoxState(IntPtr hCheckBox);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetCheckBoxState(IntPtr hCheckBox, [MarshalAs(UnmanagedType.Bool)] bool isChecked);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetCheckBoxCallback(IntPtr hCheckBox, CheckBoxCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void EnableCheckBox(IntPtr hCheckBox, [MarshalAs(UnmanagedType.Bool)] bool enable);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void ShowCheckBox(IntPtr hCheckBox, [MarshalAs(UnmanagedType.Bool)] bool show);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetCheckBoxText(IntPtr hCheckBox, byte[] textBytes, int textLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetCheckBoxBounds(IntPtr hCheckBox, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetCheckBoxText(IntPtr hCheckBox, IntPtr buffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetCheckBoxColor(IntPtr hCheckBox, uint fgColor, uint bgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetCheckBoxCheckColor(IntPtr hCheckBox, uint color);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetCheckBoxStyle(IntPtr hCheckBox, int style);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetCheckBoxStyle(IntPtr hCheckBox);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateRadioButton(IntPtr parent, int x, int y, int width, int height, byte[] textBytes, int textLen, int groupId, [MarshalAs(UnmanagedType.Bool)] bool isChecked, uint fgColor, uint bgColor, byte[] fontBytes, int fontLen, int fontSize, [MarshalAs(UnmanagedType.Bool)] bool bold, [MarshalAs(UnmanagedType.Bool)] bool italic, [MarshalAs(UnmanagedType.Bool)] bool underline);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetRadioButtonState(IntPtr hRadioButton);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetRadioButtonState(IntPtr hRadioButton, [MarshalAs(UnmanagedType.Bool)] bool isChecked);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetRadioButtonCallback(IntPtr hRadioButton, RadioButtonCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetRadioButtonText(IntPtr hRadioButton, byte[] textBytes, int textLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetRadioButtonBounds(IntPtr hRadioButton, int x, int y, int width, int height);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetRadioButtonText(IntPtr hRadioButton, IntPtr buffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetRadioButtonColor(IntPtr hRadioButton, uint fgColor, uint bgColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetRadioButtonDotColor(IntPtr hRadioButton, uint color);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetRadioButtonStyle(IntPtr hRadioButton, int style);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern IntPtr CreateProgressBar(IntPtr parent, int x, int y, int width, int height, int initialValue, uint fgColor, uint bgColor, [MarshalAs(UnmanagedType.Bool)] bool showText, uint textColor);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetProgressValue(IntPtr hProgressBar, int value);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetProgressValue(IntPtr hProgressBar);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void SetProgressIndeterminate(IntPtr hProgressBar, [MarshalAs(UnmanagedType.Bool)] bool indeterminate);
